# leptos-igdb

./: .gitignore  Cargo.toml  Makefile.toml  README.md  dev.sh  index.html  tailwind.config.js  vercel.json
src/: api.rs  lib.rs  main.rs  routes.rs
src/routes/: game.rs  index.rs
style/: output.css
vercel/: build.sh  install.sh
